# cep-simulator

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: README.md
backend/analysis/cep_sim/: README.md
backend/analysis/cep_sim/notebooks/: cep_sim_demo.ipynb  cep_sim_mvp.ipynb  cep_sim_uk.ipynb
backend/analysis/cep_sim/service/: ad_engine.py  calibration.py  codebook_parser.py  load_data.py  ontology_builder.py  output_builder.py  plotting.py  recall_engine.py  reshape_survey.py  respondent_builder.py  runner.py  scenario_library.py  validator.py
backend/analysis/cep_sim/tests/: test_ad_engine.py  test_calibration.py  test_recall_engine.py
backend/configs/: cep_sim_config.toml  cep_sim_config_brazil.toml  cep_sim_config_uk.toml
backend/docs/: model_spec.md
backend/framework/artifacts/: manifest.py
backend/framework/schemas/: artifact.py  run_config_base.py
backend/notebooks/: cep_sim_brazil.ipynb  cep_sim_demo.ipynb  cep_sim_mvp.ipynb  cep_sim_uk.ipynb
backend/schemas/: config.py  events.py  ontology.py  respondent.py
backend/service/: ad_engine.py  calibration.py  load_data.py  ontology_builder.py  output_builder.py  recall_engine.py  reshape_survey.py  respondent_builder.py  runner.py  utils.py  validator.py
backend/tests/: test_ad_engine.py  test_calibration.py  test_recall_engine.py  test_respondent_builder.py  test_validator.py
frontend/cep_sim/api/: app.py  plotly_charts.py  session.py
frontend/cep_sim/api/routes/: baseline.py  compare.py  export.py  setup.py  simulate.py
frontend/cep_sim/ui/: index.html
(+6 files in other folders)
